[gd_scene load_steps=7 format=3 uid="uid://beqexb7pk21fm"]

[ext_resource type="Texture2D" uid="uid://ccix2j2nxyxxu" path="res://assets/cards/energy.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bk71snn47iqhn" path="res://assets/cards/blankcard.png" id="3"]
[ext_resource type="Script" path="res://cards/card_actions.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://k8qefngrtnlg" path="res://assets/cards/cardback.png" id="5"]

[sub_resource type="Theme" id="4"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(120, 168)

[node name="draggable_card" type="Area2D"]
z_index = -2000
script = ExtResource("4")

[node name="card_base" type="Control" parent="."]
show_behind_parent = true
layout_mode = 3
anchors_preset = 0
offset_right = 126.0
offset_bottom = 177.0
pivot_offset = Vector2(60, 100)
mouse_filter = 2

[node name="card_background" type="Sprite2D" parent="card_base"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3")
offset = Vector2(125, 175)

[node name="card_image" type="Sprite2D" parent="card_base"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
position = Vector2(-57, 8)
texture = ExtResource("2")
offset = Vector2(125, 40)

[node name="top_left_label" type="Label" parent="card_base"]
layout_mode = 0
offset_left = 7.0
offset_top = 7.0
offset_right = 120.0
offset_bottom = 54.0
theme = SubResource("4")
text = "this is a label that is long and needs to wrap"
autowrap_mode = 3

[node name="bottom_label" type="Label" parent="card_base"]
layout_mode = 0
offset_left = 7.0
offset_top = 143.0
offset_right = 118.0
offset_bottom = 169.0
theme = SubResource("4")
clip_text = true

[node name="card_back_sprite" type="Sprite2D" parent="card_base"]
visible = false
position = Vector2(63, 88)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5")

[node name="card_collision_box" type="CollisionShape2D" parent="."]
modulate = Color(0.513726, 0.564706, 0.705882, 1)
z_index = 1
position = Vector2(63, 87)
shape = SubResource("1")

[node name="timer" type="Timer" parent="."]

[node name="FlipButton" type="Button" parent="."]
offset_left = 16.0
offset_top = 178.0
offset_right = 62.0
offset_bottom = 218.0
text = "Flip"

[node name="TapButton" type="Button" parent="."]
offset_left = 66.0
offset_top = 178.0
offset_right = 112.0
offset_bottom = 218.0
text = "Tap"

[node name="ReturnButton" type="Button" parent="."]
custom_minimum_size = Vector2(40, 40)
offset_left = 66.0
offset_top = 224.0
offset_right = 112.0
offset_bottom = 264.0
text = "Place"

[node name="place_menu" type="PopupMenu" parent="ReturnButton"]
item_count = 4
item_0/text = "Deck Top"
item_0/id = 0
item_1/text = "Deck Bottom"
item_1/id = 1
item_2/text = "Hand"
item_2/id = 2
item_3/text = "Close"
item_3/id = 3

[node name="MoreButton" type="Button" parent="."]
offset_left = 16.0
offset_top = 224.0
offset_right = 62.0
offset_bottom = 264.0
text = "..."

[node name="MorePanel" type="Panel" parent="MoreButton"]
visible = false
layout_mode = 0
offset_right = 220.0
offset_bottom = 220.0

[node name="MoreScrollContainer" type="ScrollContainer" parent="MoreButton/MorePanel"]
layout_mode = 0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 220.0

[node name="MoreLabel" type="Label" parent="MoreButton/MorePanel/MoreScrollContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "lorem ipsum fal;skjdf;lkasjdf 
asdjf as'kdjf askldjf a;lsk jdfkl;jsda;jas dlfasl;  gjkh;klg sakl;jsgf has kl;dhjgf l;ijas"
autowrap_mode = 2

[node name="CloseMoreButton" type="Button" parent="MoreButton/MorePanel"]
layout_mode = 0
offset_left = 199.0
offset_top = 1.0
offset_right = 219.0
offset_bottom = 21.0
text = "X"

[connection signal="input_event" from="." to="." method="_on_touch_input_event"]
[connection signal="pressed" from="FlipButton" to="." method="_on_FlipButton_pressed"]
[connection signal="pressed" from="TapButton" to="." method="_on_TapButton_pressed"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_Return_pressed"]
[connection signal="index_pressed" from="ReturnButton/place_menu" to="." method="_on_place_menu_index_pressed"]
[connection signal="pressed" from="MoreButton" to="." method="_on_MoreButton_pressed"]
[connection signal="pressed" from="MoreButton/MorePanel/CloseMoreButton" to="." method="_on_CloseMoreButton_pressed"]
